--- a/fe/public/index.html
+++ b/fe/public/index.html
@@ -1,19 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Basic -->
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <!-- Mobile Metas -->
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <!-- Site Metas -->
+    <meta name="keywords" content="기억, 뇌, video, brain, 릴스, 영상, 저장" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="수십 개의 링크와 영상 속에서 헤매는 당신을 위해, Video Brain이 대신 기억해 드릴게요."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+    <meta name="author" content="" />
+
+    <meta property="og:title" content="Video Brain" />
+    <meta property="og:image" content="/images/ogHeader.png" />
+    <meta
+      property="og:description"
+      content="수십 개의 링크와 영상 속에서 헤매는 당신을 위해, Video Brain이 대신 기억해 드릴게요."
+    />
+    <meta property="og:url" content="https://videobrain.netlify.app/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Video Brain" />
+    <meta property="og:locale" content="en_US" />
+
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
+    <title>Video Brain</title>
+
+    <link rel="icon" href="/images/hero-logo.png" type="image/png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -24,7 +44,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
